# llm-rag-pipeline

./: .gitignore  README.md  pyproject.toml
.zen/: config.yaml
app/: aws_util.py  build_index.py  generator.py  main.py  rag_pipeline.py  retriever.py  test.py
faiss_index/: index.faiss  index.pkl
llm_rag_app/app/: aws_util.py  generator.py  main.py  retriever.py
mlruns/0/: meta.yaml
